--- a/recipes/xpdtools/meta.yaml
+++ b/recipes/xpdtools/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
+  skip: True  # [win]
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
   entry_points:
