mdsplus: Cleaned up build and run time requirements [skip appveyor]

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -21,34 +21,27 @@ build:
 
 requirements:
   build:
-    - libxml2
-    - freetds
-    - readline
-    - ncurses
-    - unixodbc
-    - pyodbc
-    - gcc
-    - python 2.*
-    - xorg-libx11
-    - xorg-libxt
-    - openmotif
-    - openmotif-dev
-    - toolchain
-    - perl
+    - freetds 1.0.44
+    - libxml2 2.9.5
+    - ncurses 5.9
+    - openmotif 2.3.7
+    - openmotif-dev 2.3.7
+    - python
+    - readline 7.0
     - setuptools
+    - toolchain 2.1.2
+    - unixodbc 2.3.4
+    - xorg-libx11 1.6.4
+    - xorg-libxt 1.1.5
   run:
-    - libxml2
-    - freetds
-    - readline
-    - ncurses
-    - unixodbc
-    - pyodbc
-    - libiconv
-    - xorg-libx11
-    - xorg-libxt
-    - openmotif
-    - openmotif-dev
-    - python 2.*
+    - libxml2 2.9.5
+    - freetds 1.0.44
+    - readline 7.0
+    - ncurses 5.9
+    - unixodbc 2.3.4
+    - pyodbc 4.0.17
+    - libiconv 1.15
+    - python
     - numpy
 
 test:
