Further whittling of build and run requirements [skip appveyor]

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -1,6 +1,7 @@
 {% set name = "mdsplus" %}
 {% set version = "7.7.9" %}
 {% set sha256 = "5b54e4f7bb00afee7ca9ad0fd7f5fda69afe39c817f68c7739939b1415f05008" %}
+
 package:
   name: {{ name|lower }}
   version: {{ version }}
@@ -15,32 +16,21 @@ source:
     - mdsdcl_show_version.c.patch
     - Makefile.in.patch
     - mdsdcl_Makefile.in.patch
+
 build:
   number: 0
   skip: True  # [win or py3k]
 
 requirements:
   build:
-    - freetds 1.0.44
     - libxml2 2.9.5
-    - ncurses 5.9
     - openmotif 2.3.7
     - openmotif-dev 2.3.7
     - python
-    - readline 7.0
     - setuptools
-    - toolchain 2.1.2
-    - unixodbc 2.3.4
-    - xorg-libx11 1.6.4
-    - xorg-libxt 1.1.5
+    - toolchain 2.*
   run:
-    - libxml2 2.9.5
-    - freetds 1.0.44
-    - readline 7.0
-    - ncurses 5.9
-    - unixodbc 2.3.4
-    - pyodbc 4.0.17
-    - libiconv 1.15
+    - openmotif 2.3.7
     - python
     - numpy
 
