mdsplus: Add gcc linux dependency [skip appveyor]

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -10,6 +10,8 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/MDSplus/{{ name }}/archive/stable_release-{{ version | replace('.','-') }}.tar.gz
   sha256: {{ sha256 }}
+  
+  #Patches are mostly to correct /usr/local type explicit statements of dependencies  ; issue raised at https://github.com/MDSplus/mdsplus/issues/1201
   patches:
     - configure.patch.osx  # [osx]
     - configure.patch.linux  # [linux]
@@ -23,15 +25,16 @@ build:
 
 requirements:
   build:
-    - libxml2 2.9.5
-    - openmotif 2.3.7
-    - openmotif-dev 2.3.7
+    - gcc 4.8.*  # [linux]
+    - libxml2 2.9.*
+    - openmotif 2.3.*
+    - openmotif-dev 2.3.*
     - perl 5.26.0
     - python
     - setuptools
     - toolchain 2.*
   run:
-    - openmotif 2.3.7
+    - openmotif 2.3.*
     - python
     - numpy
 
