mdsplus: Removed a patch file in favor of just exporting CFLAGS [skip appveyor]

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -17,7 +17,6 @@ source:
     - configure.patch.linux  # [linux]
     - mdsdcl_show_version.c.patch
     - Makefile.in.patch
-    - mdsdcl_Makefile.in.patch
 
 build:
   number: 0
@@ -32,7 +31,7 @@ requirements:
     - perl 5.26.0
     - python
     - setuptools
-    - toolchain 2.*
+    - toolchain
   run:
     - openmotif 2.3.*
     - python
