Ensuring recipe adheres to conda-forge standards

--- a/recipes/rauth/meta.yaml
+++ b/recipes/rauth/meta.yaml
@@ -1,20 +1,24 @@
+{% set name = "rauth" %}
+{% set version = "0.7.3" %}
+{% set sha256 = "524cdbc1c28560eacfc9a9d40c59525eb8d00fdf07fbad86107ea24411477b0a" %}
+
 package:
-  name: rauth
-  version: "0.7.3"
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  fn: rauth-0.7.3.tar.gz
-  url: https://pypi.python.org/packages/43/aa/7c8e852275394d65ac5bf3ac9945ecaafe4d083089e09cb0a267efea389a/rauth-0.7.3.tar.gz
-  sha256: 524cdbc1c28560eacfc9a9d40c59525eb8d00fdf07fbad86107ea24411477b0a
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
   
 build:
   number: 0
+  script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
     - python
     - setuptools
-    - requests >=1.2.3
 
   run:
     - python
@@ -27,5 +31,10 @@ test:
 about:
   home: https://github.com/litl/rauth
   license: MIT
+  license_file: LICENSE
   summary: 'A Python library for OAuth 1.0/a, 2.0, and Ofly.'
   license_family: MIT
+
+extra:
+  recipe-maintainers:
+    - tizzir
