Made license field more specific.

--- a/recipes/intelhex/meta.yaml
+++ b/recipes/intelhex/meta.yaml
@@ -28,7 +28,7 @@ test:
 
 about:
   home: https://pypi.python.org/pypi/IntelHex
-  license: BSD
+  license: BSD-3-Clause
   license_file: LICENSE.txt
   summary: Python library for Intel HEX files manipulations
   doc_url: http://python-intelhex.readthedocs.org/en/latest
