Now testing f2c from Fortran to C to run, and building the library with -fPIC

--- a/recipes/f2c/meta.yaml
+++ b/recipes/f2c/meta.yaml
@@ -1,14 +1,14 @@
 {% set name = "f2c" %}
-{% set version = "1.0.1" %}
-{% set sha256 = "ca404070e9ce0a9aaa6a71fc7d5489d014ade952c5d6de7efb88de8e24f2e8e0" %}
+{% set version = "20160102" %}
+{% set sha256 = "fc287517edc67c184bf91860aaa7b342c6c8ce008b298c2a08c4616133009c21" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.zip
-  url: http://www.netlib.org/{{name}}/lib{{name}}.zip
+  fn: {{ name }}-{{ version }}.tar
+  url: http://netlib.sandia.gov/cgi-bin/netlib/netlibfiles.tar?filename=netlib/{{name}}
   sha256: {{ sha256 }}
 
 build:
@@ -18,13 +18,15 @@ build:
 requirements:
   build:
     - toolchain
+    - unzip
 
 test:
   commands:
     - test -f ${PREFIX}/include/f2c/f2c.h
     - conda inspect linkages -p $PREFIX f2c  # [not win]
     - conda inspect objects -p $PREFIX f2c  # [osx]
-    - ${CC} ${PREFIX}/share/f2c/test_main.c -L${PREFIX}/lib -lf2c -I${PREFIX}/include -o test_main ; ./test_main
+    - f2c --version
+    - f2c ${PREFIX}/share/f2c/test_main.f && ${CC} test_main.c -L${PREFIX}/lib -lf2c -I${PREFIX}/include -o test_main && ./test_main
   requires:
     - toolchain
 
@@ -32,9 +34,10 @@ about:
   home: http://www.netlib.org/f2c/
   license: OTHER
   license_family: OTHER
-  license_file: Notice
+  license_file: permission
   summary: 'f2c is a program to convert Fortran 77 to C code, developed at Bell Laboratories.'
-  description:  The standalone f2c program was based on the core of the first complete Fortran 77 compiler to be implemented, the "f77" program by Feldman and Weinberger.
+  description:  The standalone f2c program was based on the core of the first complete Fortran 77 
+                compiler to be implemented, the "f77" program by Feldman and Weinberger.
   doc_url: http://www.netlib.org/f2c/README
   dev_url: http://www.netlib.org/f2c/
 
