--- a/recipes/agg-regrid/meta.yaml
+++ b/recipes/agg-regrid/meta.yaml
@@ -3,8 +3,8 @@
 {% set sha256 = "c7882f15a4e0f4fb3d82de8e074ab38aa76881692083900c55c5b72addbb4cff" %}
 
 package:
-  name = {{ name }}
-  version = {{ version }}
+  name: {{ name }}
+  version: {{ version }}
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
