Try again with conda_r_skeleton_helper

--- a/recipes/r-spatest/meta.yaml
+++ b/recipes/r-spatest/meta.yaml
@@ -12,23 +12,15 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/SPAtest_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/SPAtest/SPAtest_{{ version }}.tar.gz
-
-
   sha256: 191843f66f626d3279523afddfdc9ad8561184acbd6842cce07d86a6a37c38c0
-  # patches:
-   # List any patch files here
-   # - fix.patch
 
 build:
-  # If this is a new build for the same version, increment the build number.
   number: 0
+  skip: true  # [win32]
 
-  # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
-
-
 requirements:
   build:
     - r-base
@@ -38,15 +30,8 @@ requirements:
 
 test:
   commands:
-    # You can put additional test commands to be run here.
     - $R -e "library('SPAtest')"  # [not win]
     - "\"%R%\" -e \"library('SPAtest')\""  # [win]
-
-  # You can also put a file called run_test.py, run_test.sh, or run_test.bat
-  # in the recipe that will be run at test time.
-
-  # requires:
-    # Put any additional test requirements here.
 
 about:
   home: https://CRAN.R-project.org/package=SPAtest
@@ -54,31 +39,10 @@ about:
   summary: 'Performs score test using saddlepoint approximation to estimate the null distribution. '
 
   license_family: GPL3
-
-# The original CRAN metadata for this package was:
-
-# Package: SPAtest
-# Type: Package
-# Title: Score Test Based on Saddlepoint Approximation
-# Version: 2.0.2
-# Date: 2017-11-03
-# Author: Rounak Dey, Seunggeun Lee
-# Maintainer: Rounak Dey <deyrnk@umich.edu>
-# Description: Performs score test using saddlepoint approximation to estimate the null distribution.
-# Depends: R (>= 3.0.0)
-# License: GPL (>= 2)
-# Repository: CRAN
-# NeedsCompilation: no
-# Packaged: 2017-11-03 15:13:37 UTC; Rounak
-# Date/Publication: 2017-11-03 16:51:44 UTC
-
-# See
-# http://docs.continuum.io/conda/build.html for
-# more information about meta.yaml
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
 
 extra:
   recipe-maintainers:
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
+    - endrebak
+
