python-telegram-bot: Switch license to LGPL-3.0

--- a/recipes/telegram-bot/meta.yaml
+++ b/recipes/telegram-bot/meta.yaml
@@ -36,9 +36,9 @@ test:
 
 about:
   home: https://github.com/python-telegram-bot/python-telegram-bot
-  license: GPL-3.0
+  license: LGPL-3.0
   license_family: GPL
-  license_file: LICENSE
+  license_file: LICENSE.lesser
   summary: 'A pure Python interface for the Telegram Bot API.'
 
   description: |
