add noarch dep message

--- a/recipes/example/meta.yaml
+++ b/recipes/example/meta.yaml
@@ -20,6 +20,7 @@ source:
 
 build:
   # Uncomment the following line if the package is pure python and the recipe is exactly the same for all platforms.
+  # It is ok if the dependencies are not built for all platforms/versions.
   # See https://conda-forge.org/docs/meta.html#building-noarch-packages for more details.
   # noarch: python
   number: 0
