--- a/recipes/shed/meta.yaml
+++ b/recipes/shed/meta.yaml
@@ -40,6 +40,7 @@ about:
   license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
+  summary: 'Streaming Heterogeneous Event Data'
   doc_url: https://xpdacq.github.io/SHED/ 
   dev_url: https://github.com/xpdAcq/SHED
 
