--- a/recipes/almosthere/meta.yaml
+++ b/recipes/almosthere/meta.yaml
@@ -26,28 +26,23 @@ test:
   requires:
     - python      # [win]
   commands:
-    - test -f ${PREFIX}/include/{{ athr }}.h     # [unix]
-    - test -f ${PREFIX}/lib/lib{{ athr }}.a      # [unix]
-    - test -f ${PREFIX}/lib/lib{{ athr }}.so     # [linux]
-    - test -f ${PREFIX}/lib/lib{{ athr }}.dylib  # [osx]
+    - test -f ${PREFIX}/include/athr.h     # [unix]
+    - test -f ${PREFIX}/lib/libathr.a      # [unix]
+    - test -f ${PREFIX}/lib/libathr.so     # [linux]
+    - test -f ${PREFIX}/lib/libathr.dylib  # [osx]
 
-    - if not exist %LIBRARY_INC%\{{ athr }}.h exit 1              # [win]
-    - if not exist %LIBRARY_LIB%\lib{{ athr }}.def exit 1         # [win]
-    - if not exist %LIBRARY_BIN%\lib{{ athr }}.dll exit 1         # [win]
-    - if not exist %LIBRARY_LIB%\lib{{ athr }}.lib exit 1         # [win]
-    - if not exist %LIBRARY_LIB%\lib{{ athr }}_static.lib exit 1  # [win and not py27]
+    - if not exist %LIBRARY_INC%\athr.h exit 1              # [win]
+    - if not exist %LIBRARY_LIB%\libathr.def exit 1         # [win]
+    - if not exist %LIBRARY_BIN%\libathr.dll exit 1         # [win]
+    - if not exist %LIBRARY_LIB%\libathr.lib exit 1         # [win]
+    - if not exist %LIBRARY_LIB%\libathr_static.lib exit 1  # [win and not py27]
 
 about:
   home: https://github.com/horta/almosthere
-  # Remember to specify the license variants for BSD, Apache, GPL, and LGLP.
-  # Prefer the short version, e.g: GPL-2.0 instead of GNU General Public License version 2.0
-  # See https://opensource.org/licenses/alphabetical
   license: MIT
   license_family: MIT
   license_file: LICENSE.md
   summary: 'Progress indicator C library'
-
-  # The remaining entries in this section are optional, but recommended
   description: |
     ATHR is a simple yet powerfull progress indicator library that works on
     Windows, Linux, and macOS.
