Vc14, ncurses, cmake

--- a/recipes/almosthere/meta.yaml
+++ b/recipes/almosthere/meta.yaml
@@ -19,23 +19,26 @@ build:
 
 requirements:
   build:
-    - toolchain   # [unix]
-    - python      # [win]
+    - toolchain     # [unix]
+    - python        # [win]
+    - cmake
+    - ncurses 5.9  # [not win]
+    - vc 14        # [win and py36]
+ run:
+    - ncurses 5.9  # [not win]
+    - vc 14        # [win and py36]
 
 test:
   requires:
     - python      # [win]
   commands:
-    - test -f ${PREFIX}/include/athr.h     # [unix]
-    - test -f ${PREFIX}/lib/libathr.a      # [unix]
-    - test -f ${PREFIX}/lib/libathr.so     # [linux]
-    - test -f ${PREFIX}/lib/libathr.dylib  # [osx]
-
-    - if not exist %LIBRARY_INC%\athr.h exit 1              # [win]
-    - if not exist %LIBRARY_LIB%\libathr.def exit 1         # [win]
-    - if not exist %LIBRARY_BIN%\libathr.dll exit 1         # [win]
-    - if not exist %LIBRARY_LIB%\libathr.lib exit 1         # [win]
-    - if not exist %LIBRARY_LIB%\libathr_static.lib exit 1  # [win and not py27]
+    - test -e $PREFIX/lib/libathr.so  # [linux]
+    - test -e $PREFIX/lib/libathr_static.a  # [linux]
+    - test -e $PREFIX/lib/libathr.dylib  # [osx]
+    - test -e $PREFIX/lib/libathr_static.a  # [osx]
+    - if NOT exist %PREFIX%/lib/athr.lib exit 1  # [win]
+    - if NOT exist %PREFIX%/bin/athr.dll exit 1  # [win]
+    - if NOT exist %PREFIX%/lib/athr_static.lib exit 1  # [win]
 
 about:
   home: https://github.com/horta/almosthere
