--- a/recipes/almosthere/meta.yaml
+++ b/recipes/almosthere/meta.yaml
@@ -32,8 +32,8 @@ test:
   requires:
     - python      # [win]
   commands:
-    - test -e $PREFIX/lib/libathr.so  # [linux]
-    - test -e $PREFIX/lib/libathr_static.a  # [linux]
+    - test -e $PREFIX/lib/libathr.so  # [unix]
+    - test -e $PREFIX/lib/libathr_static.a  # [unix]
     - test -e $PREFIX/lib/libathr.dylib  # [osx]
     - test -e $PREFIX/lib/libathr_static.a  # [osx]
     - if NOT exist %PREFIX%/lib/athr.lib exit 1  # [win]
