--- a/recipes/agg-regrid/meta.yaml
+++ b/recipes/agg-regrid/meta.yaml
@@ -12,7 +12,6 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  skip: true  # [osx]
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
@@ -21,9 +20,10 @@ requirements:
     - python
     - setuptools
     - cython
-    - numpy
+    - numpy 1.11.*
   run:
     - python
+    - numpy >=1.11
     - iris
 
 test:
@@ -32,14 +32,12 @@ test:
 
 about:
   home: https://github.com/SciTools-incubator/iris-{{ name }}
-  license: BSD-3-clause
-  license_family: BSD
-  license_file: COPYING
+  license: LGPL-3.0
+  license_family: LGPL
+  license_file: COPYING.LESSER
   summary: "A conservative area-weighted regridder that uses AGG to rasterise a source iris cube to a target grid"
 
 extra:
   recipe-maintainers:
     - bjlittle
     - pelson
-    - cpelley
-    - jkettleb
