--- a/recipes/implicit/meta.yaml
+++ b/recipes/implicit/meta.yaml
@@ -26,18 +26,12 @@ requirements:
     - toolchain
     - cython >=0.24
     - gcc  # [linux or osx]
-    # Pin numpy at build time with the minimum version available,
-    # the versions are adapted from the spacy feedstock
-    - numpy 1.8.*   # [not (win and (py35 or py36))]
-    - numpy 1.9.*   # [win and py35]
-    - numpy 1.11.*  # [win and py36]
+    - numpy 1.10.*
     - scipy >=0.16
   run:
     - python
     - libgcc  # [linux or osx]
-    - numpy >=1.8   # [not (win and (py35 or py36))]
-    - numpy >=1.9   # [win and py35]
-    - numpy >=1.11  # [win and py36]
+    - numpy >=1.10
     - scipy >=0.16
 
 test:
