Fix numpy/scipy versions on Windows

--- a/recipes/implicit/meta.yaml
+++ b/recipes/implicit/meta.yaml
@@ -26,12 +26,14 @@ requirements:
     - toolchain
     - cython >=0.24
     - gcc  # [linux or osx]
-    - numpy 1.10.*
+    - numpy 1.10.*  # [not (win and py36)]
+    - numpy 1.11.*  # [win and py36]
     - scipy >=0.16
   run:
     - python
     - libgcc  # [linux or osx]
-    - numpy >=1.10
+    - numpy >=1.10  # [not (win and py36)]
+    - numpy >=1.11  # [win and py36]
     - scipy >=0.16
 
 test:
