--- a/recipes/r-rintrojs/meta.yaml
+++ b/recipes/r-rintrojs/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '0.2.0' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -16,9 +15,7 @@ source:
   sha256: 2252abed788353a730def25ef9d3aa76c5325365bea208a6792532e310f2b961
 
 build:
-
   number: 0
-
   rpaths:
     - lib/R/lib/
     - lib/
@@ -36,19 +33,19 @@ requirements:
 
 test:
   commands:
-
     - $R -e "library('rintrojs')"  # [not win]
     - "\"%R%\" -e \"library('rintrojs')\""  # [win]
 
 about:
   home: https://github.com/carlganz/rintrojs
   license: AGPL-3
-  summary: 'A wrapper for the ''Intro.js'' library (For more info: <http://www.introjs.com>).  This
-    package makes it easy to include step-by-step introductions, and clickable hints
-    in a ''Shiny''  application. It supports both static introductions in the UI, and
-    programmatic introductions from  the server-side. '
-
+  summary: |
+    A wrapper for the "Intro.js" library (http://www.introjs.com).
+    This package makes it easy to include step-by-step introductions, and clickable hints
+    in a "Shiny" application. It supports both static introductions in the UI, and
+    programmatic introductions from  the server-side.
   license_family: AGPL
+
 extra:
    recipe-maintainers:
     - MathiasHaudgaard
