Implementing @dougalsutherland comment about the test file

--- a/recipes/f2c/meta.yaml
+++ b/recipes/f2c/meta.yaml
@@ -26,9 +26,11 @@ test:
     - conda inspect linkages -p $PREFIX f2c  # [not win]
     - conda inspect objects -p $PREFIX f2c  # [osx]
     - f2c --version
-    - f2c ${PREFIX}/share/f2c/test_main.f && ${CC} test_main.c -L${PREFIX}/lib -lf2c -I${PREFIX}/include -o test_main && ./test_main
+    - f2c test_main.f && ${CC} test_main.c -L${PREFIX}/lib -lf2c -I${PREFIX}/include -o test_main && ./test_main
   requires:
     - toolchain
+  files:
+    - test_main.f
 
 about:
   home: http://www.netlib.org/f2c/
