--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "Adept" %}
-{% set version = "1.1.8c24824" %}
+{% set version = "2.0.5e1a1e" %}
 {% set build_number = "0" %}
-{% set sha256 = "827fc6f25fac1312b5e7431febb836814dc28945494128e46d0fb88b0d893a86" %}
+{% set sha256 = "5981aa87566ba06e5faeb443087b58e2ecad15cc5760aa7221c20479df593fb6" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +9,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/rjhogan/Adept/archive/8c248244492fbc44f36450276d8c6bb6403556db.tar.gz
+  url: https://github.com/rjhogan/Adept-2/archive/5e1a1e913249b2bb8ed4d725121011b2a94be9a7.tar.gz
   sha256: {{ sha256 }}
 
 build:
