skip in win32 archs

--- a/recipes/r-rintrojs/meta.yaml
+++ b/recipes/r-rintrojs/meta.yaml
@@ -15,6 +15,7 @@ source:
   sha256: 2252abed788353a730def25ef9d3aa76c5325365bea208a6792532e310f2b961
 
 build:
+  skip: true  # [win32]
   number: 0
   rpaths:
     - lib/R/lib/
