--- a/recipes/pyobjcryst/meta.yaml
+++ b/recipes/pyobjcryst/meta.yaml
@@ -19,17 +19,20 @@ requirements:
   build:
     - python
     - setuptools
-    - toolchain
     - numpy 1.11.2
-    - libobjcryst >=2017.1.1,2017.1.*
-    - boost 1.61.0
+    - libobjcryst 2015.1.*  # [py2k]
+    - boost-all 1.59.0      # [py2k]
+    - libobjcryst 2017.1.*  # [py3k]
+    - boost 1.61.0          # [py3k]
     - scons
   run:
     - python
     - setuptools
     - numpy >=1.11.2
-    - libobjcryst >=2017.1.1,2017.1.*
-    - boost 1.61.0
+    - libobjcryst 2015.1.*  # [py2k]
+    - boost-all 1.59.0      # [py2k]
+    - libobjcryst 2017.1.*  # [py3k]
+    - boost 1.61.0          # [py3k]
 
 test:
   imports:
