--- a/recipes/r-spatest/meta.yaml
+++ b/recipes/r-spatest/meta.yaml
@@ -16,7 +16,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [win32]
+  skip: true  # [win32, osx]
 
   rpaths:
     - lib/R/lib/
@@ -31,7 +31,6 @@ requirements:
 test:
   commands:
     - $R -e "library('SPAtest')"  # [not win]
-    - "\"%R%\" -e \"library('SPAtest')\""  # [win]
 
 about:
   home: https://CRAN.R-project.org/package=SPAtest
@@ -40,7 +39,6 @@ about:
 
   license_family: GPL3
   license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
-  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
 
 extra:
   recipe-maintainers:
