add patch for sdmtools

--- a/recipes/r-sdmtools/meta.yaml
+++ b/recipes/r-sdmtools/meta.yaml
@@ -11,9 +11,11 @@ source:
     - https://cran.r-project.org/src/contrib/SDMTools_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/SDMTools/SDMTools_{{ version }}.tar.gz
   sha256: a6da297a670f756ee964ffd99c3b212c55c297d385583fd0e767435dd5cd4ccd
+  patches:
+    - b.patch
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win32]
   rpaths:
     - lib/R/lib/
