slightly nicer test [skip appveyor]

--- a/recipes/reaper/meta.yaml
+++ b/recipes/reaper/meta.yaml
@@ -24,8 +24,9 @@ requirements:
 
 test:
   commands:
-    # note that reaper returns an exit code of 1 with no args
-    - reaper || echo $?  # [not win]
+    # note that reaper returns an exit code of 1 with -h unless
+    # there is another arg
+    - reaper -h please  # [not win]
 
 about:
   home: https://github.com/google/REAPER/
