Add a test section to check if the module is importable.

--- a/recipes/pluginbase/meta.yaml
+++ b/recipes/pluginbase/meta.yaml
@@ -23,6 +23,10 @@ requirements:
   run:
     - python
 
+test:
+  imports:
+    - pluginbase
+
 about:
   home: http://github.com/mitsuhiko/pluginbase
   license: BSD-3-Clause
