--- a/recipes/conan/meta.yaml
+++ b/recipes/conan/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - requests >=2.7.0,<3.0.0
     - colorama >=0.3.3,<0.4.0
     - pyyaml >=3.11,<3.13.0
-    - patch ==1.16
+    - python-patch ==1.16
     - fasteners >=0.14.1
     - six >=1.10.0
     - node-semver ==0.2.0
@@ -44,7 +44,7 @@ requirements:
     - requests >=2.7.0,<3.0.0
     - colorama >=0.3.3,<0.4.0
     - pyyaml >=3.11,<3.13.0
-    - patch ==1.16
+    - python-patch ==1.16
     - fasteners >=0.14.1
     - six >=1.10.0
     - node-semver ==0.2.0
@@ -97,7 +97,6 @@ test:
     - conans.util
   commands:
     - conan --help
-    - conan_server --help
     - conan_build_info --help
 
 about:
@@ -113,3 +112,4 @@ extra:
   recipe-maintainers:
     - windelbouwmanbosch
     - windelbouwman
+    - abloemert
