Travis osx problem

--- a/recipes/almosthere/meta.yaml
+++ b/recipes/almosthere/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [py<35]
+  skip: True  # [py<35 or osx]
   features:
     - vc14  # [win and py36]
 
