--- a/recipes/reaper/meta.yaml
+++ b/recipes/reaper/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "REAPER" %}
-{% set version = "e22f2dbdad3af8b725d3fc25e6c96b23ae9aff70" %}
+{% set gitversion = "e22f2dbdad3af8b725d3fc25e6c96b23ae9aff70" %}
+{% set version = "0.0.2018.01.13" %}
 {% set sha256 = "b38369f373f43db0e06781e557e4e962014f50969d319980a28382ba518d5ecd" %}
 
 
@@ -9,7 +10,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/google/{{ name }}/archive/{{ version }}.tar.gz
+  url: https://github.com/google/{{ name }}/archive/{{ gitversion }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
