Correct matplotlib spec

--- a/recipes/parcels/meta.yaml
+++ b/recipes/parcels/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - ffmpeg >=3.2.3,<3.2.6
     - gcc  # [unix]
     - m2w64-toolchain  # [win]
-    - matplotlib =2.0.2
+    - matplotlib 2.0.2
     - netcdf4 >=1.1.9
     - numpy >=1.9.1
     - progressbar2
