Correct download link

--- a/recipes/parcels/meta.yaml
+++ b/recipes/parcels/meta.yaml
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/simplejson/{{ name }}/archive/v{{ version }}.tar.gz
+  url: https://github.com/oceanparcels/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
