Patch setup with explicit version

--- a/recipes/parcels/meta.yaml
+++ b/recipes/parcels/meta.yaml
@@ -10,6 +10,8 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/oceanparcels/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+      - remove_setuptools-scm_dependency.patch
 
 build:
   skip: True  # [py3k]
