--- a/recipes/giza/meta.yaml
+++ b/recipes/giza/meta.yaml
@@ -20,6 +20,7 @@ build:
 
 requirements:
   build:
+    - gcc  # [osx]
     - pkg-config
     - pthread-stubs
     - toolchain
@@ -27,6 +28,7 @@ requirements:
     - xorg-libx11 1.6.*
   run:
     - cairo 1.14.*
+    - libgfortran  # [unix]
     - xorg-libx11 1.6.*
 
 test:
