--- a/recipes/gql/meta.yaml
+++ b/recipes/gql/meta.yaml
@@ -44,12 +44,7 @@ about:
   license_family: MIT
   license_file: ''
   summary: GraphQL client for Python
-  description: "GQL\r\n===\r\n\r\nThis is a GraphQL client for Python. Plays nicely with ``graphene``,\r\n``graphql-core``, ``graphql-js`` and any other GraphQL implementation\r\ncompatible with the spec.\r\
-    \n\r\nGQL architecture is inspired by ``React-Relay`` and ``Apollo-Client``.\r\n\r\n|travis| |pypi| |coveralls|\r\n\r\nInstallation\r\n------------\r\n\r\n::\r\n\r\n    $ pip install gql\r\n\r\nUsage\r\
-    \n-----\r\n\r\nThe example below shows how you can execute queries against a local\r\nschema.\r\n\r\n.. code:: python\r\n\r\n    from gql import gql, Client\r\n\r\n    client = Client(schema=schema)\r\
-    \n    query = gql('''\r\n    {\r\n      hello\r\n    }\r\n    ''')\r\n\r\n    client.execute(query)\r\n\r\nLicense\r\n-------\r\n\r\n`MIT\r\nLicense <https://github.com/graphql-python/gql/blob/master/LICENSE>`__\r\
-    \n\r\n.. |travis| image:: https://img.shields.io/travis/graphql-python/gql.svg?style=flat\r\n   :target: https://travis-ci.org/graphql-python/gql\r\n.. |pypi| image:: https://img.shields.io/pypi/v/gql.svg?style=flat\r\
-    \n   :target: https://pypi.python.org/pypi/gql\r\n.. |coveralls| image:: https://coveralls.io/repos/graphql-python/gql/badge.svg?branch=master&service=github\r\n   :target: https://coveralls.io/github/graphql-python/gql?branch=master"
+  description: "This is a GraphQL client for Python. Plays nicely with graphene, graphql-core, graphql-js and any other GraphQL implementation compatible with the spec."
   doc_url: ''
   dev_url: ''
 
