--- a/recipes/parallel/meta.yaml
+++ b/recipes/parallel/meta.yaml
@@ -12,9 +12,9 @@ source:
 
 build:
   number: 0
+  skip: True  # [win]
 
 requirements:
-  build:
   run:
     - perl
   
@@ -27,6 +27,7 @@ about:
   license: GPL-3
   license_family: GPL
   summary: GNU parallel is a shell tool for executing jobs in parallel using one or more computers.
+  license_file: COPYING
 
 extra:
   recipe-maintainers:
