And simple file presence tests

--- a/recipes/judy/meta.yaml
+++ b/recipes/judy/meta.yaml
@@ -18,11 +18,11 @@ build:
 requirements:
   build:
     - toolchain
-  #run:
-  #  - glibcc
 
-#test:
-  # Some package might need a `test/commands` key to check CLI.
+test:
+  - test -f $PREFIX/lib/libJudy.so
+  - test -f $PREFIX/lib/libJudy.a
+  - test -f $PREFIX/include/Judy.h
 
 about:
   home: http://judy.sourceforge.net/index.html
