mdsplus: Add readline with explicit version [skip appveyor]

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -30,11 +30,13 @@ requirements:
     - openmotif-dev 2.3.*
     - perl 5.26.0
     - python
+    - readline 6.2.*
     - setuptools
     - toolchain
   run:
     - openmotif 2.3.*
     - python
+    - readline 6.2.*
     - numpy
 
 test:
