--- a/recipes/gql/meta.yaml
+++ b/recipes/gql/meta.yaml
@@ -18,7 +18,7 @@ build:
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
-  host:
+  build:
     - python
     - setuptools
     - six >=1.10.0
@@ -47,6 +47,3 @@ about:
   description: "This is a GraphQL client for Python. Plays nicely with graphene, graphql-core, graphql-js and any other GraphQL implementation compatible with the spec."
   doc_url: ''
   dev_url: ''
-
-extra:
-  recipe-maintainers: ''
