Added empty entry to recipe-maintainers

--- a/recipes/gql/meta.yaml
+++ b/recipes/gql/meta.yaml
@@ -47,3 +47,6 @@ about:
   description: "This is a GraphQL client for Python. Plays nicely with graphene, graphql-core, graphql-js and any other GraphQL implementation compatible with the spec."
   doc_url: ''
   dev_url: ''
+extra:
+  recipe-maintainers:
+    - ''
