Comply with review by @CJ-Wright

--- a/recipes/parcels/meta.yaml
+++ b/recipes/parcels/meta.yaml
@@ -39,11 +39,13 @@ requirements:
     - scipy >=0.16.0
     - six >=1.10.0
     - xarray >=0.5.1
+
 test:
   imports:
     - parcels
-  requires:
-    - pytest
+    - parcels.scripts
+    - parcels.kernels
+    - parcels.tools
 
 about:
   home: http://github.com/OceanParcels/parcels
