Skip OSX builds for now
Travis builds in OSX are stalling.  (Queueing times of several days.  At
least)  Let's add them when the feedstock is created and Travis has
recovered.

--- a/recipes/parcels/meta.yaml
+++ b/recipes/parcels/meta.yaml
@@ -14,7 +14,7 @@ source:
       - remove_setuptools-scm_dependency.patch
 
 build:
-  skip: True  # [py3k]
+  skip: True  # [py3k or osx]
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
