--- a/recipes/pluginbase/meta.yaml
+++ b/recipes/pluginbase/meta.yaml
@@ -17,7 +17,7 @@ build:
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
-  host:
+  build:
     - python
     - setuptools
   run:
