Tests do not require mock and pytest

--- a/recipes/gql/meta.yaml
+++ b/recipes/gql/meta.yaml
@@ -14,13 +14,13 @@ source:
   '{{ hash_type }}': '{{ hash_value }}'
 
 build:
+  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
     - python
-    - setuptools
     - six >=1.10.0
     - graphql-core >=0.5.0
     - promise >=0.4.0
@@ -34,19 +34,15 @@ test:
   imports:
     - gql
     - gql.transport
-  requires:
-    - mock
-    - pytest >=2.7.2
 
 about:
   home: https://github.com/graphql-python/gql
   license: MIT
   license_family: MIT
-  license_file: ''
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: GraphQL client for Python
-  description: "This is a GraphQL client for Python. Plays nicely with graphene, graphql-core, graphql-js and any other GraphQL implementation compatible with the spec."
-  doc_url: ''
-  dev_url: ''
+  description: "This is a GraphQL client for Python. Plays nicely with graphene, graphql-core, graphql-js and\
+    any other GraphQL implementation compatible with the spec."
 extra:
   recipe-maintainers:
-    - ''
+    - ozagordi
