--- a/recipes/gql/meta.yaml
+++ b/recipes/gql/meta.yaml
@@ -21,6 +21,7 @@ build:
 requirements:
   build:
     - python
+    - setuptools
     - six >=1.10.0
     - graphql-core >=0.5.0
     - promise >=0.4.0
