--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - autoconf
     - automake
     - libtool
-
+    - libgfortran
 test:
   commands:
     - test -L $PREFIX/lib/libadept.so  # [linux]
