try explicitly specifying compilers???

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -22,7 +22,8 @@ requirements:
     - autoconf
     - automake
     - libtool
-    - libgfortran
+    - gcc
+    - gfortran
 test:
   commands:
     - test -L $PREFIX/lib/libadept.so  # [linux]
