--- a/recipes/python-sounddevice/meta.yaml
+++ b/recipes/python-sounddevice/meta.yaml
@@ -30,8 +30,7 @@ requirements:
 
 test:
   imports:
-    - simplejson
-    - simplejson.tests
+    - sounddevice
 
 about:
   home: https://python-sounddevice.readthedocs.io/
