--- a/recipes/python-sounddevice/meta.yaml
+++ b/recipes/python-sounddevice/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "python-sounddevice" %}
-{% pypi_name = "sounddevice" %}
+{% set pypi_name = "sounddevice" %}
 {% set version = "0.3.10" %}
 {% set sha256 = "6a972db105b11a570b454c0b92b5d37ead46829ce71a278b148ec6479209ad9f" %}
 
@@ -21,6 +21,7 @@ requirements:
   build:
     - python
     - setuptools
+    - cffi
   run:
     - python
     - cffi
