--- a/recipes/jack/meta.yaml
+++ b/recipes/jack/meta.yaml
@@ -24,7 +24,7 @@ test:
     - conda inspect objects -p $PREFIX jack  # [osx]
 
 about:
-  home: http://www.portaudio.com/
+  home: http://jackaudio.org/
   license: LGLP-2.0
   license_file: COPYING.LGPL
   summary: 'Audio connection kit.'
