use defaults version

--- a/recipes/portaudio/meta.yaml
+++ b/recipes/portaudio/meta.yaml
@@ -2,7 +2,7 @@
 
 package:
   name: portaudio
-  version:  {{ version }}
+  version: 19.6.0
 
 source:
   url: http://www.portaudio.com/archives/pa_stable_v{{ version }}.tgz
