--- a/recipes/portaudio/meta.yaml
+++ b/recipes/portaudio/meta.yaml
@@ -15,6 +15,9 @@ requirements:
   build:
     - posix  # [win]
     - m2w64-toolchain  # [win]
+    - alsa-lib  # [linux]
+  run:
+    - alsa-lib  # [linux]
 
 test:
   commands:
