--- a/recipes/portaudio/meta.yaml
+++ b/recipes/portaudio/meta.yaml
@@ -21,6 +21,7 @@ requirements:
 
 test:
   commands:
+    - test -f $PREFIX/lib/libportaudio$SHLIB_EXT
     - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
     - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
 
@@ -33,3 +34,4 @@ about:
 extra:
   recipe-maintainers:
     - ocefpaf
+    - scopatz
