use conda's gcc for now

--- a/recipes/portaudio/meta.yaml
+++ b/recipes/portaudio/meta.yaml
@@ -16,8 +16,10 @@ requirements:
     - posix  # [win]
     - m2w64-toolchain  # [win]
     - alsa-lib  # [linux]
+    - gcc
   run:
     - alsa-lib  # [linux]
+    - libgcc
 
 test:
   commands:
