--- a/recipes/portaudio/meta.yaml
+++ b/recipes/portaudio/meta.yaml
@@ -10,16 +10,17 @@ source:
 
 build:
   number: 0
+  skip: True  # [osx]
 
 requirements:
   build:
     - posix  # [win]
     - m2w64-toolchain  # [win]
     - alsa-lib  # [linux]
-    - gcc
+    - gcc  # [linux]
   run:
     - alsa-lib  # [linux]
-    - libgcc
+    - libgcc  # [linux]
 
 test:
   commands:
