--- a/recipes/pyaudio/meta.yaml
+++ b/recipes/pyaudio/meta.yaml
@@ -17,7 +17,7 @@ build:
   skip: True  # [win or py2k or osx]
   script:
     - export PORTAUDIO_PATH=$PREFIX  # [not win]
-    - python setup.py install --static-link
+    - python setup.py install
 
 requirements:
   build:
