fix windows test

--- a/recipes/portaudio/meta.yaml
+++ b/recipes/portaudio/meta.yaml
@@ -22,7 +22,7 @@ requirements:
 
 test:
   commands:
-    - test -f $PREFIX/lib/libportaudio$SHLIB_EXT
+    - test -f $PREFIX/lib/libportaudio$SHLIB_EXT  # [not win]
     - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
     - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
 
