Fix review comments

--- a/recipes/smokesignal/meta.yaml
+++ b/recipes/smokesignal/meta.yaml
@@ -23,8 +23,6 @@ requirements:
     - python
 
 test:
-  # Some package might need a `test/commands` key to check CLI.
-  # List all the packages/modules that `run_test.py` imports.
   imports:
     - smokesignal
 
@@ -33,12 +31,11 @@ about:
   license: MIT
   license_family: MIT
   license_file: LICENSE
-  summary: 'Simple, fast, extensible JSON encoder/decoder for Python'
+  summary: 'A simple python library for sending and receiving signals'
 
-  # The remaining entries in this section are optional, but recommended
   description: |
     smokesignal is a simple python library for sending and receiving
-    signals. It draws some inspiration from the django signal 
+    signals. It draws some inspiration from the django signal
     framework but is meant as a general purpose variant.
 
 extra:
