westpa: update req restrictions

--- a/recipes/westpa/meta.yaml
+++ b/recipes/westpa/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: './setup.sh && cp -r $SRC_DIR $PREFIX'
-  skip: True # [win or py3k]
+  skip: True  # [win or py3k]
 
 requirements:
   build:
@@ -25,10 +25,10 @@ requirements:
   run:
     - python
     - numpy >=1.11
-    - scipy
-    - h5py
-    - pyyaml
-    - pyzmq
+    - scipy 1.0.*
+    - h5py 2.7.*
+    - pyyaml 3.12
+    - pyzmq 16.0.*
 
 test:
   commands:
