add some maintainer notes

--- a/recipes/monkeytype/meta.yaml
+++ b/recipes/monkeytype/meta.yaml
@@ -34,6 +34,7 @@ test:
   imports:
     - monkeytype
   commands:
+    # TODO: make upstream PR for redistributing tests
     - git clone https://github.com/Instagram/MonkeyType
     - cd MonkeyType
     - git checkout v{{ PKG_VERSION }}
