--- a/recipes/retype/meta.yaml
+++ b/recipes/retype/meta.yaml
@@ -39,6 +39,7 @@ about:
   home: https://github.com/ambv/retype
   license: MIT
   license_family: MIT
+  # FIXME: The upstream PR might land some time >17.12.0
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: Re-apply type annotations from .pyi stubs to your codebase.
 
