monkeytype is py36 only

--- a/recipes/monkeytype/meta.yaml
+++ b/recipes/monkeytype/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [py2k]
+  skip: true  # [not py36]
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
