they both are, but should support py37

--- a/recipes/monkeytype/meta.yaml
+++ b/recipes/monkeytype/meta.yaml
@@ -13,7 +13,9 @@ source:
 
 build:
   number: 0
-  skip: true  # [not py36]
+  skip: true  # [py2k]
+  skip: true  # [py34]
+  skip: true  # [py35]
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
