--- a/recipes/retype/meta.yaml
+++ b/recipes/retype/meta.yaml
@@ -14,6 +14,8 @@ source:
 build:
   number: 0
   skip: true  # [py2k]
+  skip: true  # [py34]
+  skip: true  # [py35]
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
