--- a/recipes/monkeytype/meta.yaml
+++ b/recipes/monkeytype/meta.yaml
@@ -40,7 +40,9 @@ test:
     - git clone https://github.com/Instagram/MonkeyType
     - cd MonkeyType
     - git checkout v{{ PKG_VERSION }}
-    - rm -rf monkeytype
+    - rm -rf monkeytype  # [not win]
+    - rd /s /q monkeytype  # [win]
+    # FIXME: not sure about this one
     - python -m pytest -k "not test_includes_otherwise"
 
 about:
