don't do coverage on windows

--- a/recipes/monkeytype/meta.yaml
+++ b/recipes/monkeytype/meta.yaml
@@ -42,6 +42,7 @@ test:
     - git checkout v{{ PKG_VERSION }}
     - rm -rf monkeytype  # [not win]
     - rd /s /q monkeytype  # [win]
+    - del pytest.ini  # [win]
     # FIXME: not sure about this one
     - python -m pytest -k "not test_includes_otherwise"
 
