--- a/recipes/monkeytype/meta.yaml
+++ b/recipes/monkeytype/meta.yaml
@@ -16,6 +16,8 @@ build:
   skip: true  # [py2k]
   skip: true  # [py34]
   skip: true  # [py35]
+  entry_points:
+    - monkeytype=monkeytype.cli:entry_point_main
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
@@ -36,6 +38,7 @@ test:
   imports:
     - monkeytype
   commands:
+    - monkeytype --help
     # TODO: make upstream PR for redistributing tests
     - git clone https://github.com/Instagram/MonkeyType
     - cd MonkeyType
