--- a/recipes/retype/meta.yaml
+++ b/recipes/retype/meta.yaml
@@ -16,6 +16,8 @@ build:
   skip: true  # [py2k]
   skip: true  # [py34]
   skip: true  # [py35]
+  entry_points:
+    - retype=retype:main
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
@@ -34,6 +36,7 @@ test:
   imports:
     - retype
   commands:
+    - retype --help
     - cd tests
     - python test_retype.py
 
