--- a/recipes/retype/meta.yaml
+++ b/recipes/retype/meta.yaml
@@ -13,9 +13,7 @@ source:
 
 build:
   number: 0
-  skip: true  # [py2k]
-  skip: true  # [py34]
-  skip: true  # [py35]
+  skip: true  # [py<36]
   entry_points:
     - retype=retype:main
   script: python -m pip install --no-deps --ignore-installed .
