skip geor windows for now

--- a/recipes/r-geor/meta.yaml
+++ b/recipes/r-geor/meta.yaml
@@ -17,7 +17,7 @@ source:
 build:
   number: 0
   script: R CMD INSTALL --build .
-  skip: True  # [win32]
+  skip: True  # [win]
   rpaths:
     - lib/R/lib/
     - lib/
