--- a/recipes/judy/meta.yaml
+++ b/recipes/judy/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win]
 
 requirements:
@@ -20,9 +20,10 @@ requirements:
     - toolchain
 
 test:
-  - test -f $PREFIX/lib/libJudy.so
-  - test -f $PREFIX/lib/libJudy.a
-  - test -f $PREFIX/include/Judy.h
+  commands:
+    - test -f $PREFIX/lib/libJudy.so
+    - test -f $PREFIX/lib/libJudy.a
+    - test -f $PREFIX/include/Judy.h
 
 about:
   home: http://judy.sourceforge.net/index.html
