giza: disable a test that doesn't work on macOS

--- a/recipes/giza/meta.yaml
+++ b/recipes/giza/meta.yaml
@@ -13,6 +13,7 @@ source:
   sha256: {{ sha256 }}
   patches:
     - fix-tests.patch
+    - disable-macos-tests.patch  # [osx]
 
 build:
   number: 0
