Use correct test commands

--- a/recipes/lld/meta.yaml
+++ b/recipes/lld/meta.yaml
@@ -39,7 +39,9 @@ test:
     - cmake >=3.4.3
 
   commands:
-    - lld --version
+    - ld.lld --version  # [linux]
+    - ld --version  # [osx]
+    - lld-link /?  # [win]
 
 about:
   home: http://llvm.org/
