Fixing license name

--- a/recipes/optlang/meta.yaml
+++ b/recipes/optlang/meta.yaml
@@ -38,7 +38,7 @@ test:
 
 about:
   home: https://github.com/biosustain/optlang
-  license: Apache Software License
+  license: Apache
   license_family: APACHE
   license_file: LICENSE
   summary: 'optlang - sympy based mathematical programming language'
