--- a/recipes/optlang/meta.yaml
+++ b/recipes/optlang/meta.yaml
@@ -15,6 +15,8 @@ build:
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+#swiglpk not available for windows at the moment. 
+  skip: True  # [win]
 
 requirements:
   build:
