--- a/recipes/r-logspline/meta.yaml
+++ b/recipes/r-logspline/meta.yaml
@@ -41,7 +41,7 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=logspline
-  license: Apache License 2.0
+  license: Apache 2.0
   summary: Routines for the logspline density estimation. oldlogspline() uses the same algorithm
     as the logspline 1.0.x package - the Kooperberg and Stone (1992) <DOI
   license_family: APACHE
