removed License from license

--- a/recipes/r-plasmidprofiler/meta.yaml
+++ b/recipes/r-plasmidprofiler/meta.yaml
@@ -65,7 +65,7 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=Plasmidprofiler
-  license: Apache License 2.0
+  license: Apache 2.0
   summary: Contains functions developed to combine the results of querying a plasmid database
     using short-read sequence typing with the results of a blast analysis against the
     query results.
