--- a/recipes/djangorestframework-jwt/meta.yaml
+++ b/recipes/djangorestframework-jwt/meta.yaml
@@ -24,6 +24,9 @@ requirements:
     - python
     - django >=1.8
 
+test:
+  imports:
+    - rest_framework_jwt
 about:
   home: https://github.com/GetBlimp/django-rest-framework-jwt
   license: MIT
