--- a/recipes/r-ics/meta.yaml
+++ b/recipes/r-ics/meta.yaml
@@ -28,7 +28,6 @@ requirements:
     - r-base
     - r-mvtnorm
     - r-survey
-
   run:
     - r-base
     - r-mvtnorm
@@ -42,7 +41,8 @@ test:
 about:
   home: https://CRAN.R-project.org/package=ICS
   license: GPL (>= 2)
-  summary: Implementation of Tyler, Critchley, Duembgen and Oja's (JRSS B, 2009, <doi
+  summary: |
+    Implementation of a method of two different scatter matrices to obtain an invariant coordinate system or independent components, depending on the underlying assumptions. 
   license_family: GPL3
   license_file: '{{ environ["PREFIX"] }}\/lib\/R\/share\/licenses\/GPL-3'  # [unix]
   license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
