--- a/recipes/r-drc/meta.yaml
+++ b/recipes/r-drc/meta.yaml
@@ -48,9 +48,10 @@ test:
     - "\"%R%\" -e \"library('drc')\""  # [win]
 
 about:
-  home: http
+  home: https://cran.r-project.org/web/packages/drc/index.html
   license: GPL-2
-  summary: Analysis of dose-response data is made available through a suite of flexible and versatile
+  summary: |
+    Analysis of dose-response data is made available through a suite of flexible and versatile
     model fitting and after-fitting functions.
   license_family: GPL2
   license_file: '{{ environ["PREFIX"] }}\/lib\/R\/share\/licenses\/GPL-2'  # [unix]
