--- a/recipes/r-svd/meta.yaml
+++ b/recipes/r-svd/meta.yaml
@@ -40,7 +40,7 @@ test:
     - "\"%R%\" -e \"library('svd')\""  # [win]
 
 about:
-  home: http
+  home: https://cran.r-project.org/web/packages/svd/index.html
   license: BSD_3_clause
   summary: R bindings to SVD and eigensolvers (PROPACK, nuTRLan).
   license_family: BSD
