--- a/recipes/r-mustat/meta.yaml
+++ b/recipes/r-mustat/meta.yaml
@@ -12,13 +12,11 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/muStat_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/muStat/muStat_{{ version }}.tar.gz
-
   sha256: 9f9f425b562ceb2754bbd82f725ea0fc5c661a4f2b50ebdab50ca698643fe2a0
 
 build:
   number: 0
   skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
@@ -26,7 +24,6 @@ build:
 requirements:
   build:
     - r-base
-
   run:
     - r-base
 
@@ -36,10 +33,10 @@ test:
     - "\"%R%\" -e \"library('muStat')\""  # [win]
 
 about:
-  home: http
+  home: https://cran.r-project.org/web/packages/muStat/index.html
   license: GPL (>= 2)
-  summary: Performs Wilcox rank sum test, Kruskal rank sum test, Friedman rank sum test and McNemar
-    test.
+  summary: |
+    Performs Wilcox rank sum test, Kruskal rank sum test, Friedman rank sum test and McNemar test.
   license_family: GPL3
   license_file: '{{ environ["PREFIX"] }}\/lib\/R\/share\/licenses\/GPL-3'  # [unix]
   license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
