--- a/recipes/r-qtl/meta.yaml
+++ b/recipes/r-qtl/meta.yaml
@@ -40,9 +40,10 @@ test:
     - "\"%R%\" -e \"library('qtl')\""  # [win]
 
 about:
-  home: http
+  home: https://cran.r-project.org/web/packages/qtl/index.html
   license: GPL-3
-  summary: Analysis of experimental crosses to identify genes (called quantitative trait loci,
+  summary: |
+    Analysis of experimental crosses to identify genes (called quantitative trait loci,
     QTLs) contributing to variation in quantitative traits.
   license_family: GPL3
   license_file: '{{ environ["PREFIX"] }}\/lib\/R\/share\/licenses\/GPL-3'  # [unix]
