--- a/recipes/r-bnlearn/meta.yaml
+++ b/recipes/r-bnlearn/meta.yaml
@@ -40,7 +40,7 @@ test:
     - "\"%R%\" -e \"library('bnlearn')\""  # [win]
 
 about:
-  home: http
+  home: https://cran.r-project.org/web/packages/bnlearn/index.html
   license: GPL (>= 2)
   summary: Bayesian network structure learning, parameter learning and inference. This package
     implements constraint-based (PC, GS, IAMB, Inter-IAMB, Fast-IAMB, MMPC, Hiton-PC),
