Small fixes [skip appveyor]

--- a/recipes/optlang/meta.yaml
+++ b/recipes/optlang/meta.yaml
@@ -20,9 +20,6 @@ requirements:
   build:
     - python
     - setuptools
-    - sympy >=1.0.0
-    - six >=1.9.0
-    - swiglpk >=1.4.3
 
   run:
     - python
@@ -38,8 +35,8 @@ test:
 
 about:
   home: https://github.com/biosustain/optlang
-  license: Apache
-  license_family: APACHE
+  license: Apache-2.0
+  license_family: Apache
   license_file: LICENSE
   summary: 'optlang - sympy based mathematical programming language'
 
