--- a/recipes/example/meta.yaml
+++ b/recipes/example/meta.yaml
@@ -30,13 +30,12 @@ build:
   # If the installation is complex, or different between Unix and Windows, use separate bld.bat and build.sh files instead of this key.
   # By default, the package will be built for the Python versions supported by conda-forge and for all major OSs.
   # Add the line "skip: True  # [py<35]" (for example) to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit to Windows.
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
     - python
-    # When setuptools is available add the `--single-version-externally-managed --record record.txt` above.
-    - setuptools
+    - pip
     # if your project compiles code (such as a C extension) then add `toolchain` as a build requirement.
   run:
     - python
