switch to Adept-2 dev_url

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -60,9 +60,8 @@ about:
     supported along with matrix multiplication and basic linear algebra operations.
     Of course, the library also works well with passive arrays (those that do not
     need to be differentiated).
-
   doc_url: http://www.met.reading.ac.uk/clouds/adept/documentation.html
-  dev_url: https://github.com/rjhogan/Adept
+  dev_url: https://github.com/rjhogan/Adept-2
 
 extra:
   recipe-maintainers:
