switch to official release tarball

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "Adept" %}
-{% set version = "2.0.5e1a1e" %}
+{% set version = "2.0.4" %}
 {% set build_number = "0" %}
-{% set sha256 = "5981aa87566ba06e5faeb443087b58e2ecad15cc5760aa7221c20479df593fb6" %}
+{% set sha256 = "5743b523c2cb7e9eaac602dc742c2d956ca437f9bb128bf574afffc2abf137fb" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +9,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/rjhogan/Adept-2/archive/5e1a1e913249b2bb8ed4d725121011b2a94be9a7.tar.gz
+  url: https://www.met.reading.ac.uk/clouds/adept/adept-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
