depend on openblas; use shipped ./configure

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -19,10 +19,11 @@ build:
 requirements:
   build:
     - toolchain
-    - autoconf
-    - automake
-    - libtool
     - gcc
+    - openblas 0.2.20
+  run:
+    - openblas 0.2.20
+
 test:
   commands:
     - test -L $PREFIX/lib/libadept.so  # [linux]
